--- a/style.css
+++ b/style.css
@@ -43,12 +43,13 @@ a{
     font-style: italic;
     margin: 5px 45px 0px 15px;
     color: #ffffff;
+    cursor: pointer;
 }
 a:link{
     text-decoration: none;
     
 }
-input, button{
+input, button, textarea{
   border:none;
 }
 img{
@@ -94,19 +95,25 @@ nav{
 .blue{
   background-color: #1896dc;
 }
+
 .color-blue{
   color: #1896dc;
 }
+
 .color-white{
   color: #ffffff;
 }
+
 .light-blue{
   background-color: #30a7ea; 
-  border-radius: 10px;
+  border-radius: 0px;
   height: 50px;    
   padding: 11px;
-  border-bottom-right-radius: 0px;
-  
+  border-bottom-left-radius: 10px;
+}
+
+.shorter-line {
+  line-height: 18px;
 }
 
 .menu img{
@@ -114,20 +121,26 @@ nav{
   width: 60%;
 }
 .compre{
-    background-color: #182458;
-    padding: 7px;
-    border-radius: 8px;
-    color: #ffffff;
-    font-family: "HansomFYW01bold";
-    position: relative;
-    bottom: 6px;
-
+  background-color: #182458;
+  padding: 7px 15px;
+  border-radius: 20px;
+  color: #ffffff;
+  font-family: "HansomFYW01bold";
+  position: relative;
+  bottom: 6px;
 }
+
+.highlight-text {
+  font-size: 38px;
+  line-height: 42px;
+}
+
 .circulo{
   height: 100px;
   width: 100px;
   border-radius: 50px;
   font-size: 13px;
+  font-family: "HansomFYW01bold";
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -167,7 +180,7 @@ nav{
   bottom: 108px;
   right: 54px;
   float: right;
-  font-size: 21px;
+  font-size: 17px;
   font-family: 'HansomFYW03';
   z-index: 1;
 }
@@ -237,6 +250,7 @@ nav{
 }
 .tabelas{
 text-align: center;
+padding-bottom: 40px;
 }
 .tabelas img{
 width: 70%;
@@ -251,9 +265,6 @@ width: 70%;
 }
 .carrossel{
   justify-content: center;
-}
-.vaquinha{
-  margin-top: 50px;
 }
 .vaquinha-text{
   padding-top: 40px;
@@ -270,9 +281,9 @@ width: 70%;
 }
 .imagem-vaquinha{
   width: 80%;
-  position: relative;
-  left: -15px;
-  top: 88px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 .vaquinha-mais-branco{
   width: 5%;
@@ -319,6 +330,10 @@ width: 70%;
 .localizacao img{
   width: 60%;
 }
+.v-magin-30 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 .mapa{  
   text-align-last: right;
 }
@@ -336,9 +351,12 @@ width: 70%;
 .depoimento{
   text-align: center;
 }
+.depoimento {
+  padding-bottom: 40px;
+}
 .depoimento img{
   padding: 5px 0px 50px 13px;
-  width: 20%;
+  width: 30%;
 }
 .balao-maior{
   width: 30% !important; 
@@ -348,8 +366,21 @@ width: 70%;
   display: flex;
   place-content: space-evenly;
 }
+
+.depoimento-imagem img {
+  height: 150px;
+  width: auto;
+}
 .depoimento h2{
   padding: 45px 10px 60px 10px;
+}
+ul.slick-dots li button:before {
+  font-size: 11px;
+  opacity: 1;
+  color: #f7f7f7;
+}
+ul.slick-dots li.slick-active button:before {
+  color: #182458;
 }
 .dots{
   padding: 30px;
@@ -359,39 +390,76 @@ width: 70%;
   background-image: url(img/bg-contato.png);
   background-color: #30a7ea;
   text-align: -webkit-center;
+  padding: 50px 70px;
+}
+.contato p {
+  width: 77%;
+  font-size: 25px;
+}
+.slider {
+  width: 80%;
+}
+#background-ecommerce {
+  background-image: url(img/light-pattern.png);
+  padding-bottom: 40px;
+}
+.ecommerce {
+  text-align: center;
+  display: flex;
+  place-content: space-evenly;
+  padding-top: 40px;
+}
+.ecommerce .slick-slide img {
+  display: block;
+  height: 290px;
+}
+.ecommerce-offer img {
+  padding: 0 5px;
+}
+.ecommerce  ul.slick-dots li button:before {
+  font-size: 11px;
+  opacity: 1;
+  color: #313c6d;
+}
+ul.slick-dots li.slick-active button:before {
+  border: 1px solid #333;
+  border-radius: 50%;
+  color: #182458;
 }
 .contato h2{    
   font-size: 85px;
-  margin-right: 145px;
-  margin-left: 32px;
 }
-.contato img{
+.vaquinha-flutuante {
   width: 25%;
-  float: right;
-  position: relative;
-  right: 134px;
-  top: 16px;
+  position: absolute;
+  top: -18px;
+  left: 240px;
 }
 .contato-text{
   text-align: -webkit-left;
   position: relative;
-  bottom: 57px;
 }
 .conjunto-contato{
   display: flex;
   flex-direction: column;
 }
-input{
+input, textarea{
   overflow: visible;
-  width: 60%;
-  border-radius: 6px;
-  margin-top: 30px;
+  width: 100%;
+  border-radius: 15px;
+  margin-top: 20px;
   color: #30a7ea;
-  width: 70%;
-  height: 35px;
+  height: 45px;
+  padding: 0 15px;
+  font-style: italic;
+}
+input:focus, textarea:focus{
+  outline: none;
 }
 #mensagem{
   height: 100px;
+  padding-top: 10px;
+  font-style: italic;
 }
 .circulo-footer{
   height: 30px;
@@ -414,14 +482,15 @@ input{
   border-radius: 25px;
 }
 .footer img{
-  width: 60%;
+  width: 50%;
+  margin-top: 10px;
 }
 
 @media (max-width: 700px) {
   .hidden {
     display: none !important;
   }
-  p, .texto-produto p, .pedaco p, .chamada p, .vaquinha p, .duvida p, .find p{
+  p, .texto-produto p, .pedaco p, .chamada p, .vaquinha p, .duvida p, .find p, .contato p{
     font-size: 16px;    
   }
   h1{
@@ -433,12 +502,26 @@ input{
   h2, .duvida h2, .vaquinha-text h2, .depoimento h2, .contato h2{
     font-size: 30px;
   }
+  .menu .col-md-2{
+    text-align: center;
+  }
+  .menu img {
+    width: 20%;
+  }
   nav{
     display: flex;
     flex-direction: column;
   }
+  nav a {
+    margin: 3px 10px;
+  }
+  nav .compre {
+    margin: 10px 0;
+    text-align: center;
+  }
   .light-blue{
     height: 170px;
+    border-bottom-left-radius: 0;
   }
   .texto-produto {
     position: relative; 
@@ -447,6 +530,11 @@ input{
   .texto-produto p{
     margin-right: 0px;
     padding-bottom: 15px;
+    text-align: center;
+    margin-top: 25px;
+  }
+  .ecommerce .slick-slide img {
+    height: 485px;
   }
   .pedaco p{
     padding-top: 0px;
@@ -459,15 +547,17 @@ input{
   }
   .vaquinha p{
     padding: 0px;
-    text-align: center;
   }
   .vaquinha-text {
-    margin-top: -116px;
+    margin-top: -135px;
     padding-left: 105px;
+    padding-top: 0;
   }
-  .vaquinha-text h2{
-    text-align: center;
-  }  
+  .vaquinha-text p, .vaquinha-text h2 {
+    text-align: right;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
   .imagem-vaquinha {
     width: 40%;
     position: relative;
@@ -475,7 +565,7 @@ input{
     top: 14px;
   }
   .duvida{
-    padding: 20px 0px 15px 0px;
+    padding: 45px 0px 45px 0px;
   }
   .localizacao{
     padding-top: 20px;
@@ -493,17 +583,22 @@ input{
 .input{
   margin-top: 15px;
 }
-.contato-text {
-  position: relative;
-  bottom: 10px;
+.contato{
+  padding: 25px 10px;
 }
-.contato img {
-  position: relative;
-  right: 132px;
-  top: 36px;
+.vaquinha-flutuante {
+  top: -7px;
+  left: 90px;
+}
+.social {
+  padding-top: 5px;
+  text-align: -webkit-center;
 }
 .footer a{
-  margin: 0px;
+  margin: 3px;
+}
+.footer img {
+  width: 100%;
 }
 
 }
